# build

./: groups  package.gni  project.config
bootfs/: BUILD.gn
config/: BUILD.gn  sysroot.gni
config/fuchsia/: BUILD.gn  zbi.gni  zircon.gni
gn/: BUILD.gn  config.gni  gen.py  guess_layer.py
gzos/: app.gni  trusty_app.gni
images/: BUILD.gn
manifest/: minimal
otg/: config.gni
sdk/: sdk_atom.gni
