# Copyright 2018 Open Trust Group. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Update this variable to specify customized third-party zircon build
  zircon_project = target_cpu

  # Enable this to disable building zedboot image
  disable_zedboot = false

  # Build packages as FAR archives and store them in /system. This is required
  # for --bootfs builds.
  bootfs_packages = false
}
